AoC2023, Day13, Part2 solution (#14)